--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ before_install:
 install:
   - npm install -g node-gyp-install
   - node-gyp-install
-  - npm install serialport@3.1.1
-  - npm install noble
+  - npm install serialport
+  - npm install @abandonware/noble
   - npm install
   - npm install -g grunt-cli istanbul codeclimate-test-reporter
 script:
